--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "twinit": "tailwindcss init"
+    "preview": "vite preview"
   },
   "dependencies": {
     "motion": "^12.23.24",
